--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>About Us | ShopEase</title>
+  <title>About Us | DeLux Mart</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
@@ -25,7 +25,7 @@
 
   <section class="about-hero">
     <div class="hero-text">
-      <h1>About ShopEase</h1>
+      <h1>About DeLux Mart</h1>
       <p>Your trusted destination for everyday essentials and beyond.</p>
     </div>
   </section>
@@ -33,7 +33,7 @@
   <section class="about-content">
     <div class="about-container">
       <h2>Who We Are</h2>
-      <p>ShopEase is an online shopping platform built with a mission — to bring convenience, affordability, and quality to your fingertips. We specialize in fashion, electronics, lifestyle, and everyday essentials, all in one place.</p>
+      <p>DeLux Mart is an online shopping platform built with a mission — to bring convenience, affordability, and quality to your fingertips. We specialize in fashion, electronics, lifestyle, and everyday essentials, all in one place.</p>
 
       <h2>Our Vision</h2>
       <p>To become the most customer-centric e-commerce platform by delivering value, simplicity, and satisfaction with every order.</p>
@@ -47,15 +47,16 @@
       </ul>
 
       <h2>Our Story</h2>
-      <p>Founded in 2025 by a team of tech and retail enthusiasts, ShopEase was created to bridge the gap between high-quality products and affordability. We started small — now we deliver across cities and towns, empowering customers with confidence and ease.</p>
+      <p>Founded in 2025 by a team of Tech Force and retail enthusiasts, DeLux Mart was created to bridge the gap between high-quality products and affordability. We started small — now we deliver across cities and towns, empowering customers with confidence and ease.</p>
 
       <h2>Contact Us</h2>
+      <p>Our Team<br>1. N. Lavanya Sri<br>2. N. Durga Bhavani<br>3. O. Monik Paparao</p>
       <p>Have queries or feedback? We’re here to help! Email us at <a href="mailto:v647414@gmail.com">v647414@gmail.com</a></p>
     </div>
   </section>
 
   <footer>
-    <p>&copy; 2025 ShopEase. All rights reserved.</p>
+    <p>&copy; 2025 DeLux Mart. All rights reserved.</p>
   </footer>
 
   <script>
