--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>ShopEase | Login</title>
+  <title>DeLux Mart | Login</title>
   <link rel="stylesheet" href="loginstyles.css" />
 </head>
 <body>
@@ -30,7 +30,7 @@
   </section>
 
   <footer>
-    <p>&copy; 2025 ShopEase. All rights reserved.</p>
+    <p>&copy; 2025 DeLux Mart. All rights reserved.</p>
   </footer>
 
   <script>
