--- a/orders.html
+++ b/orders.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Orders | ShopEase</title>
+  <title>Orders | DeLux Mart</title>
   <link rel="stylesheet" href="styles.css" />
   <style>
     .orders-container {
@@ -197,7 +197,7 @@
   </div>
 
   <footer>
-    <p>&copy; 2025 ShopEase. All rights reserved.</p>
+    <p>&copy; 2025 DeLux Mart. All rights reserved.</p>
   </footer>
 
   <script>
