--- a/seller-login.html
+++ b/seller-login.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Seller Login | ShopEase</title>
+  <title>Seller Login | DeLux Mart</title>
   <link rel="stylesheet" href="loginstyles.css" />
 </head>
 <body>
@@ -16,7 +16,7 @@
       <form id="sellerLoginForm">
         <div class="input-group">
           <label for="email">Email</label>
-          <input type="email" id="email" name="email" required placeholder="v647414@gmail.com" />
+          <input type="email" id="email" name="email" required placeholder="example@gmail.com" />
         </div>
         <div class="input-group">
           <label for="password">Password</label>
@@ -30,7 +30,7 @@
   </section>
 
   <footer>
-    <p>&copy; 2025 ShopEase. All rights reserved.</p>
+    <p>&copy; 2025 DeLux Mart. All rights reserved.</p>
   </footer>
 
   <script>
