--- a/sellerinsert.html
+++ b/sellerinsert.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>ShopEase | Login</title>
+  <title>DeLux Mart | Login</title>
   <link rel="stylesheet" href="loginstyles.css" />
 </head>
 <body>
@@ -20,7 +20,7 @@
         </div>
         <div class="input-group">
           <label for="email">Email</label>
-          <input type="email" id="email" name="email" required placeholder="example@mail.com" />
+          <input type="email" id="email" name="email" required placeholder="example@gmail.com" />
         </div>
         <div class="input-group">
           <label for="password">Password</label>
@@ -38,7 +38,7 @@
 
 
   <footer>
-    <p>&copy; 2025 ShopEase. All rights reserved.</p>
+    <p>&copy; 2025 DeLux Mart. All rights reserved.</p>
   </footer>
 </body>
 </html>
