--- a/cart.html
+++ b/cart.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Cart | ShopEase</title>
+  <title>Cart | DeLux Mart</title>
   <link rel="icon" href="/images/Logo1.png" type="image/x-icon">
   <link rel="stylesheet" href="styles.css" />
   <style>
@@ -70,7 +70,7 @@
     </div>
   </div>
 
-  <footer><p>&copy; 2025 ShopEase. All rights reserved.</p></footer>
+  <footer><p>&copy; 2025 DeLux Mart. All rights reserved.</p></footer>
 
   <script>
     function updateNavigation() {
