--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>ShopEase | Home</title>
+  <title>DeLux Mart | Home</title>
   <link rel="stylesheet" href="/styles.css" />
 </head>
 <body>
@@ -66,7 +66,7 @@
   </section>
 
   <footer>
-    <p>&copy; 2025 ShopEase. All rights reserved.</p>
+    <p>&copy; 2025 DeLux Mart. All rights reserved.</p>
   </footer>
 
   <script>
